--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -16,10 +16,16 @@
                                 <a class="nav-link active" aria-current="page" href="/">Home</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="/secret">Secret</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="/register">Register</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/login">Login</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/logout">Logout</a>
                             </li>
 
                         </ul>
